@@ -20,6 +20,8 @@ DEPRECATED & DEFUNCT
 
     o	methods::trySilent() is defunct.
 
+    o   New generic function .DollarNames() to enable class authors 
+        to customize completion after the $ extractor.
 
 
 	**************************************************
